# en-605-202-lab1

./: .gitignore  Deliverables.md  README.md  clean_outputs.py  main.py  pyproject.toml
bugs/: conversion_errors_20250211_014154.txt
data_errors/: expression_error_20250211_004154.json  expression_error_20250211_004322.json
outputs/: converted_illustrative_infix_strings.txt  converted_illustrative_postfix_strings.txt  converted_illustrative_prefix_strings.txt  converted_provided_infix_strings.txt  converted_provided_postfix_strings.txt  converted_provided_prefix_strings.txt  infix_to_postfix_20250210_230237.txt  infix_to_prefix_20250211_014154.txt  postfix_to_infix_20250211_014154.txt  postfix_to_prefix_20250211_014154.txt  prefix_to_infix_20250211_014154.txt  prefix_to_postfix_20250211_014154.txt
resources/: config.yml
resources/data/: illustrative_infix_strings.txt  illustrative_postfix_strings.txt  illustrative_prefix_strings.txt  provided_infix_strings.txt  provided_postfix_strings.txt  provided_prefix_strings.txt
src/: config.yaml  config.yml  converters.py  file_processor.py  find_bugs.py  helpers.py  main.py
tests/: conftest.py  test_converters.py
